Pin to msprime 1.4.1b1 to test wheels

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -68,7 +68,7 @@ test = [
     "kastore",
     "lshmm",
     "msgpack",
-    "msprime",
+    "msprime==1.4.1b1", # Temp - just to test msprime builds
     "networkx",
     "numba",
     "portion",
