Switch to general build workflow

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -94,6 +94,11 @@ docs = [
     "pandas",
 ]
 
+
+wheels = [
+  "cibuildwheel",
+]
+
 # Fully pin lint requirements for determinism.
 lint = [
     "clang-format==21.1.8",
@@ -153,3 +158,15 @@ known-third-party = [
   "numpy",
   "pytest",
 ]
+
+[tool.cibuildwheel]
+build = ["cp311-*", "cp312-*", "cp313-*", "cp314-*"]
+build-frontend = "build"
+build-verbosity = 1
+test-command = [
+  "python -c \"import _tskit\"",
+  "tskit --help",
+]
+
+[tool.cibuildwheel.linux]
+archs = ["x86_64"]
