--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,237 +1,41 @@
-name: Build and test wheels
+name: Publish Python release
 
 on:
   push:
-    branches:
-      - main
-      - test
-    tags:
-      - '*'
+    branches: [test-publish]
   release:
     types: [published]
 
-
-env:
-  FORCE_COLOR: 1
-
 jobs:
-  OSX:
-    runs-on: macos-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python: [3.11, 3.12, 3.13, 3.14]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v6.0.2
-      - name: Set up Python ${{ matrix.python }}
-        uses: actions/setup-python@v6.1.0
-        with:
-          python-version: ${{ matrix.python }}
-      - name: Install deps
-        run: |
-          pip install build
-      - name: Build Wheel
-        run: |
-          cd python
-          python -m build --wheel --config-setting=--plat-name=macosx_10_9_universal2
-      - name: Delocate to bundle dynamic libs
-        run: |
-          cd python
-          pip install delocate
-          delocate-wheel -v dist/*.whl
-      - name: Upload Wheels
-        uses: actions/upload-artifact@v6.0.0
-        with:
-          name: osx-wheel-${{ matrix.python }}
-          path: python/dist
+  build-wheels:
+    uses: tskit-dev/.github/.github/workflows/build-wheels.yml@main
+    with:
+      pyproject-directory: python
 
-  windows:
-    runs-on: windows-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python: [3.11, 3.12, 3.13, 3.14]
-        wordsize: [64]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v6.0.2
-      - name: Install deps
-        env:
-          PYTHON: "py -${{ matrix.python }}-${{ matrix.wordsize }}"
-        shell: bash
-        run: |
-          set -ex
-          ${PYTHON} -m pip install build
-      - name: Build Wheel
-        env:
-          PYTHON: "py -${{ matrix.python }}-${{ matrix.wordsize }}"
-        shell: bash
-        run: |
-          set -ex
-          git reset --hard
-          cd python
-          ${PYTHON} -VV
-          # For some reason I can't work out the C compiler is not following symlinks
-          rm -r lib
-          mkdir lib
-          cp -r --dereference ../c/subprojects lib/.
-          cp -r --dereference ../c/tskit lib/.
-          cp ../c/tskit.h lib/.
-          ${PYTHON} -m build --wheel
-      - name: Upload Wheels
-        uses: actions/upload-artifact@v6.0.0
-        with:
-          name: win-wheel-${{ matrix.python }}-${{ matrix.wordsize }}
-          path: python/dist
-
-  manylinux:
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v6.0.2
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v6.1.0
-        with:
-          python-version: 3.11
-
-      - name: Build sdist
-        shell: bash
-        run: |
-          cd python
-          python -m pip install build
-          python -m build --sdist
-
-      - name: Upload sdist
-        uses: actions/upload-artifact@v6.0.0
-        with:
-          name: sdist
-          path: python/dist
-
-      - name: Build wheels in docker
-        shell: bash
-        run: |
-          docker run --rm -v `pwd`:/project -w /project quay.io/pypa/manylinux2014_x86_64 bash .github/workflows/docker/buildwheel.sh
-
-      - name: Upload Wheels
-        uses: actions/upload-artifact@v6.0.0
-        with:
-          name: linux-wheels
-          path: python/dist/wheelhouse
-
-  OSX-test:
-    needs: ['OSX']
-    strategy:
-      fail-fast: false
-      matrix:
-        python: [3.11, 3.12, 3.13, 3.14]
-        runner: [macos-15, macos-15-intel]
-        include:
-          - runner: macos-15
-            arch: arm64
-          - runner: macos-15-intel
-            arch: x86_64
-    runs-on: ${{ matrix.runner }}
-    steps:
-      - name: Download wheels
-        uses: actions/download-artifact@v7.0.0
-        with:
-          name: osx-wheel-${{ matrix.python }}
-      - name: Set up Python ${{ matrix.python }}
-        uses: actions/setup-python@v6.1.0
-        with:
-          python-version: ${{ matrix.python }}
-      - name: Verify architecture
-        run: |
-          arch_name=$(uname -m)
-          echo "Running on architecture: $arch_name"
-          if [[ "$arch_name" != "${{ matrix.arch }}" ]]; then
-            echo "Error: Expected ${{ matrix.arch }} but got $arch_name"
-            exit 1
-          fi
-      - name: Install wheel and test
-        run: |
-          python -VV
-          # Install the local wheel
-          pip install ./tskit-*.whl
-          python -c "import tskit; import platform; print(f'Running on {platform.machine()} architecture')"
-
-  windows-test:
-    needs: ['windows']
-    runs-on: windows-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python: [3.11, 3.12, 3.13, 3.14]
-        wordsize: [64]
-    steps:
-      - name: Download wheels
-        uses: actions/download-artifact@v7.0.0
-        with:
-          name: win-wheel-${{ matrix.python }}-${{ matrix.wordsize }}
-      - name: Set up Python ${{ matrix.python }}
-        uses: actions/setup-python@v6.1.0
-        with:
-          python-version: ${{ matrix.python }}
-      - name: Install wheel and test
-        shell: bash
-        run: |
-          python -VV
-          # Install the local wheel
-          python -m pip install *.whl
-          python -c "import tskit"
-
-  manylinux-test:
-    runs-on: ubuntu-24.04
-    needs: ['manylinux']
-    strategy:
-      fail-fast: false
-      matrix:
-        python: [3.11, 3.12, 3.13, 3.14]
-        include:
-          - python: 3.11
-            wheel: cp311
-          - python: 3.12
-            wheel: cp312
-          - python: 3.13
-            wheel: cp313
-          - python: 3.14
-            wheel: cp314
-    steps:
-      - name: Download wheels
-        uses: actions/download-artifact@v7.0.0
-        with:
-          name: linux-wheels
-      - name: Set up Python
-        uses: actions/setup-python@v6.1.0
-        with:
-          python-version: ${{ matrix.python }}
-      - name: Install wheel and test
-        run: |
-          python -VV
-          # Install the local wheel
-          pip install ./tskit-*-${{ matrix.wheel }}-*.whl
-          python -c "import tskit"
-
-  PyPI_Upload:
+  publish:
     runs-on: ubuntu-24.04
     environment: release
-    needs: ['windows-test', 'OSX-test', 'manylinux-test']
+    needs: [ 'build-wheels' ]
     permissions:
       id-token: write
     steps:
-      - name: Download all
+      - name: Download artifacts
         uses: actions/download-artifact@v7.0.0
-      - name: Move to dist
-        run: |
-          mkdir dist
-          cp */*.{whl,gz} dist/.
+        with:
+          pattern: build-*
+          path: dist
+          merge-multiple: true
+
+      - name: Show artifacts
+        run: ls -lah dist
+
       - name: Publish distribution to Test PyPI
-        if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') && !contains(github.event.ref, 'C_')
+        if: github.event_name == 'push' && github.ref_name == 'test-publish'
         uses: pypa/gh-action-pypi-publish@v1.13.0
         with:
-          repository_url: https://test.pypi.org/legacy/
-      - name: Publish distribution to PRODUCTION PyPI
-        if: github.event_name == 'release' && !startsWith(github.event.release.tag_name, 'C_')
+          repository-url: https://test.pypi.org/legacy/
+          verbose: true
+
+      - name: Publish distribution to Production PyPI
+        if: github.event_name == 'release'
         uses: pypa/gh-action-pypi-publish@v1.13.0
