--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,9 +13,9 @@ jobs:
 
   packaging:
     name: Python packaging
-    uses: tskit-dev/.github/.github/workflows/python-packaging.yml@v4
+    uses: tskit-dev/.github/.github/workflows/python-packaging.yml@main
     with:
-      working-directory: python
+      pyproject-directory: python
       cli-test-cmd: tskit --help
 
   test-c:
