--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -99,6 +99,11 @@ wheels = [
   "cibuildwheel",
 ]
 
+packaging = [
+    "twine",
+    "validate-pyproject[all]",
+]
+
 # Fully pin lint requirements for determinism.
 lint = [
     "clang-format==21.1.8",
@@ -110,6 +115,7 @@ dev = [
     {include-group = "docs"},
     {include-group = "lint"},
     {include-group = "test"},
+    {include-group = "packaging"},
 ]
 
 [tool.pytest.ini_options]
