Update docs workflow: install doxygen via apt, run via pre-build-command
Use cd && doxygen in pre-build-command

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,4 +15,5 @@ jobs:
     uses: tskit-dev/.github/.github/workflows/docs.yml@main
     with:
       pyproject-directory: python
-      doxygen-directory: docs/doxygen
+      additional-apt-packages: doxygen
+      pre-build-command: cd docs/doxygen && doxygen
