Standardise docs build: use __PKG_VERSION__, uv-based build.sh, minimal Makefile

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,13 +1,11 @@
-BUILDDIR      = _build
-DOXYGEN_XML=doxygen/xml
+BUILDDIR    = _build
+DOXYGEN_XML = doxygen/xml
 
-all: ${DOXYGEN_XML} dev
+all: ${DOXYGEN_XML}
+	./build.sh
 
 ${DOXYGEN_XML}: ../c/tskit/*.h
 	cd doxygen && doxygen
-
-dev:
-	uv --project=../python run jupyter-book build -Wn --keep-going .
 
 clean:
 	rm -fR $(BUILDDIR) $(DOXYGEN_XML)
