--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   Docs:
-    uses: tskit-dev/.github/.github/workflows/docs.yml@main
+    uses: tskit-dev/.github/.github/workflows/docs.yml@v12
     with:
       pyproject-directory: python
       additional-apt-packages: doxygen
