Finalize workflow pins and trigger policy

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,6 +5,6 @@ on:
 
 jobs:
   Lint:
-    uses: tskit-dev/.github/.github/workflows/lint.yml@main
+    uses: tskit-dev/.github/.github/workflows/lint.yml@v12
     with:
       pyproject-directory: python
