--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,21 +13,21 @@ jobs:
 
   packaging:
     name: Python packaging
-    uses: tskit-dev/.github/.github/workflows/python-packaging.yml@main
+    uses: tskit-dev/.github/.github/workflows/python-packaging.yml@v12
     with:
       pyproject-directory: python
       cli-test-cmd: tskit --help
 
   test-c:
     name: C tests
-    uses: tskit-dev/.github/.github/workflows/c-tests.yml@main
+    uses: tskit-dev/.github/.github/workflows/c-tests.yml@v12
     with:
       library-directory: c
     secrets: inherit
 
   test-python-c:
     name: Python-C tests
-    uses: tskit-dev/.github/.github/workflows/python-c-tests.yml@main
+    uses: tskit-dev/.github/.github/workflows/python-c-tests.yml@v12
     with:
       tests: python/tests/test_python_c.py python/tests/test_dict_encoding.py
       pyproject-directory: python
@@ -36,7 +36,7 @@ jobs:
 
   test:
     name: Python
-    uses: tskit-dev/.github/.github/workflows/python-tests.yml@main
+    uses: tskit-dev/.github/.github/workflows/python-tests.yml@v12
     with:
       os: ${{ matrix.os }}
       python-version: ${{ matrix.python }}
